<resources>
    <string name="app_name">Rotten Potatoes</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="cinemas">Cinéma:</string>
    <string name="nationality">Langue:</string>
    <string name="categorie">Public:</string>
    <string name="troisD">3D:</string>
    <string name="malEntendant">Mal Entendant:</string>
    <string name="handicape">Handicapé:</string>

    <string name="checkBoxCinema1">Le Cézanne</string>
    <string name="checkBoxCinema2">Le Renoir</string>
    <string name="checkBoxCinema3">Le Mazarin</string>

    <string name="checkBoxNationality0">VF</string>
    <string name="checkBoxNationality1">VO</string>
    <string name="checkBoxNationality2">VD</string>

    <string name="checkBoxCategorie0">--</string>
    <string name="checkBoxCategorie1">Tout Public</string>
    <string name="checkBoxCategorie2">Jeune public</string>
    <string name="checkBoxCategorie3">Interdit moins de 12 ans</string>

    <string-array name="choice_array">
        <item>Surtout pas</item>
        <item>Obligatoirement</item>
        <item>Peu importe</item>
    </string-array>

    <string name="USER_WANTS_3D">user_choice_troisd</string>
    <string name="USER_WANTS_HANDICAPE">user_choice_handicape</string>
    <string name="USER_WANTS_MALENTENDANT">user_choice_malentendant</string>
    <string name="USER_WANTS_CINEMA1">user_choice_cinema1</string>
    <string name="USER_WANTS_CINEMA2">user_choice_cinema2</string>
    <string name="USER_WANTS_CINEMA3">user_choice_cinema3</string>
    <string name="USER_WANTS_LANGUE0">user_choice_langue0</string>
    <string name="USER_WANTS_LANGUE1">user_choice_langue1</string>
    <string name="USER_WANTS_LANGUE2">user_choice_langue2</string>
    <string name="USER_WANTS_CATEGORIE1">user_choice_categorie1</string>
    <string name="USER_WANTS_CATEGORIE2">user_choice_categorie2</string>
    <string name="USER_WANTS_CATEGORIE3">user_choice_categorie3</string>
    <string name="USER_WANTS_CATEGORIE0">user_choice_categorie0</string>

    <string name="empty_title">I don\'t know who I am :(</string>
    <string name="empty_date">I don\'t know how old I am :(</string>
    <string name="empty_realisateur"> I lost my daddy :(</string>
    <string name="empty_acteur"> Where are my stars :(</string>
    <string name="empty_description"> What am I about :(</string>
    <string name="FS_seanceTitre"> Seances:</string>
    <string name="FS_seanceContent"> Pas de séance cette semaine.</string>
    <string name="gallerie_photo"> Gallerie Photo:</string>
    <string name="gallerie_video"> \n Gallerie Video:</string>
    <string name="FSnovideo"> soon ! \n</string>


</resources>
